/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package org.apache.flink.statefun.flink.core;
option java_package = "org.apache.flink.statefun.flink.core.generated";
option java_multiple_files = true;

message EnvelopeAddress {
    string namespace = 1;
    string type = 2;
    string internalNamespace = 3;
    string internalType = 4;
    string id = 5;
}

message Payload {
    string class_name = 2;
    bytes payload_bytes = 3;
}

message Checkpoint {
    int64 checkpoint_id = 1;
}

message Envelope {
    EnvelopeAddress source = 1;
    EnvelopeAddress target = 2;

    oneof body {
        Checkpoint checkpoint = 4;
        Payload payload = 3;
    }
    int64 priority = 5;
    int64 laxity = 6;
    int32 type = 7;
    int64 id = 8;
    EnvelopeAddress lessor = 9;
}
